# vortex-vkf

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  codecov.yml  package.xml
.github/workflows/: clang-formatter.yml  code-coverage.yml  industrial-ci.yml  run-unit-tests.yml
docs/: vkf_class_diagram.md
include/filters/: EKF.hpp  KF.hpp  Kalman_filter_base.hpp  UKF.hpp  ekf.hpp  imm_filter.hpp
include/integration_methods/: ERK_methods.hpp
include/kalman_filters/: EKF.hpp  EKF.md  KF.hpp  Kalman_filter_base.hpp  UKF.hpp  ekf.hpp  kf.hpp
include/models/: Dynamic_model.hpp  Dynamics_model.hpp  EKF_model_base.hpp  EKF_models.hpp  LTI_model.hpp  Measurement_model.hpp  Model_base.hpp  README.md  SIX_DOF_model.hpp  dynamic_model.hpp  imm_model.hpp  model_definitions.hpp  models.hpp  movement_models.hpp  sensor_model.hpp  temp_gyro_model.hpp
include/nodes/: kf_node.hpp
include/probability/: README.md  binomial.hpp  chi_squared.hpp  gaussian_mixture.hpp  multi_var_gauss.hpp  poisson.hpp
include/rk_methods/: ERK_methods.hpp
launch/: ekf_node.launch  vkf_node.yaml
scripts/: ci_install_dependencies.sh
src/models/: Measurement_model.cpp
src/nodes/: kf_node.cpp  vkf_node.cpp
test/: dynamic_model_test.cpp  ekf_test.cpp  erk_test.cpp  lti_model_test.cpp  main.cpp  matrix_size_test.cpp  models_test.cpp  probability_test.cpp  sensor_model_test.cpp  six_dof_model_test.cpp  test_models.hpp  ukf_test.cpp
vortex-filtering/: CMakeLists.txt  README.md  package.xml
vortex-filtering/include/vortex_filtering/: vortex_filtering.hpp
vortex-filtering/include/vortex_filtering/filters/: Kalman_filter_base.hpp  README.md  UKF.hpp  ekf.hpp  filter_base.hpp  iekf.hpp  imm_filter.hpp  immipda.hpp  ipda.hpp  pdaf.hpp  ukf.hpp
vortex-filtering/include/vortex_filtering/integration_methods/: ERK_methods.hpp
vortex-filtering/include/vortex_filtering/models/: README.md  dynamic_model.hpp  dynamic_model_interfaces.hpp  dynamic_models.hpp  imm_model.hpp  model_definitions.hpp  movement_models.hpp  sensor_model.hpp  sensor_model_interfaces.hpp  sensor_models.hpp  simple_sensor_model.hpp  state.hpp  type_aliases.hpp
vortex-filtering/include/vortex_filtering/models/interfaces/: dynamic_model.hpp  dynamic_model_ltv.hpp  general_model.hpp  sensor_model.hpp  sensor_model_ltv.hpp
vortex-filtering/include/vortex_filtering/numerical_integration/: README.md  erk_methods.hpp
vortex-filtering/include/vortex_filtering/plotting/: utils.hpp
vortex-filtering/include/vortex_filtering/probability/: README.md  binomial.hpp  chi_squared.hpp  gaussian_mixture.hpp  lie_group_gauss.hpp  multi_var_gauss.hpp  poisson.hpp  uniform.hpp
vortex-filtering/include/vortex_filtering/types/: general_concepts.hpp  model_concepts.hpp  type_aliases.hpp
vortex-filtering/include/vortex_filtering/utils/: ellipse.hpp  ellipsoid.hpp  plotting.hpp  printers.hpp
vortex-filtering/include/vortex_filtering/utils/algorithms/: auction_algorithm.hpp  murtys_method.hpp
vortex-filtering/launch/: vkf_node.launch.yaml
vortex-filtering/src/plotting/: utils.cpp
vortex-filtering/src/utils/: ellipse.cpp  gamma_function.cpp  plotting.cpp
vortex-filtering/src/utils/algorithms/: auction_algorithm.cpp  murtys_method.cpp  murtys_method_impl.cpp  murtys_method_impl.hpp
vortex-filtering/test/: CMakeLists.txt  dynamic_model_test.cpp  ekf_test.cpp  ellipsoid_test.cpp  erk_test.cpp  filter_test.cpp  gtest_assertions.cpp  gtest_assertions.hpp  gtest_main.cpp  imm_test.cpp  immipda_test.cpp  ipda_test.cpp  lie_test.cpp  lti_model_test.cpp  matrix_size_test.cpp  numerical_integration_test.cpp  pdaf_test.cpp  probability_test.cpp  sensor_model_test.cpp  state_test.cpp  test_models.hpp  types_test.cpp  ukf_test.cpp
